Added 3 'div's made css classes for applying parallax effect.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,36 @@
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
-    <div>This is Parallax.</div>
+    <div class="background">
+    </div>
+    <div class="h100 w100 v-center">
+        <div class="text w100 v-center">
+            <h1>
+                This is Parallax.
+            </h1>
+            <p>First div.</p>
+        </div>
+        <br />
+    </div>
+    <div class="h50"></div>
+    <div class="h100 w100 v-center">
+        <div class="text w50 v-center">
+            <h1>
+                This is Parallax.
+            </h1>
+            <p>Second div.</p>
+        </div>
+        <br />
+    </div>
+    <div class="h50"></div>
+    <div class="h100 w100 v-center">
+        <div class="text h50 w100 v-center">
+            <h1>
+                This is Parallax.
+            </h1>
+            <p>Third div.</p>
+        </div>
+        <br />
+    </div>
 </body>
 </html>
