Changed images and used background-attach property.

--- a/index.html
+++ b/index.html
@@ -9,32 +9,46 @@
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
-    <div class="background">
-    </div>
-    <div class="h100 w100 v-center">
-        <div class="text w100 v-center">
-            <h1>
-                This is Parallax.
-            </h1>
-            <p>First div.</p>
+    <!-- <div class="bg bgimg1 h50">
+    </div> -->
+    <div class="bg bg-attach-fixed bgimg-main v-center">
+        <div class="w100 h100 v-center">
+            <div class="text w50 v-center">
+                <h1>
+                    This is Parallax.
+                </h1>
+                <p>First div.</p>
+            </div>
         </div>
-    </div>
-    <div class="h50"></div>
-    <div class="h100 w100 v-center">
-        <div class="text w50 v-center">
-            <h1>
-                This is Parallax.
-            </h1>
-            <p>Second div.</p>
+        <div class="w100 v-center">
+            <div class="bg bg-attach-fixed bgimg1 w100 h100 translucent">
+            </div>
+            <div class="text w100 v-center pos-abs">
+                <h1>
+                    This is Parallax.
+                </h1>
+                <p>Second div.</p>
+            </div>
         </div>
-    </div>
-    <div class="h50"></div>
-    <div class="h100 w100 v-center">
-        <div class="text h50 w100 v-center">
-            <h1>
-                This is Parallax.
-            </h1>
-            <p>Third div.</p>
+        <div class="bg bg-attach-scroll bgimg2 h50 w100 v-center">
+            <div class="w100 v-center">
+                <div class="text w100 v-center">
+                    <h1>
+                        This is Parallax.
+                    </h1>
+                    <p>Third div.</p>
+                </div>
+            </div>
+        </div>
+        <div class="h50 w100 v-center">
+        </div>
+        <div class="h100 w100 v-center">
+            <div class="text h50 w100 v-center">
+                <h1>
+                    This is Parallax.
+                </h1>
+                <p>Forth div.</p>
+            </div>
         </div>
     </div>
 </body>
